--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,6 @@
 = Cracking the Coding Interview, 6th Edition
 
-== Solutions to Chapter 1: Arrays and Strings
+ 
+
+== Solutions to Chapter 1: Arrays and Strings(#https://github.com/sunilsoni/cracking-the-coding-interview/tree/master/src/com/ctci6/ch01)
 
