--- a/README.adoc
+++ b/README.adoc
@@ -11,12 +11,14 @@ other.
 
 . https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/URLify.java[*URLify:*] Write a method to replace all spaces in a string with '%2e: You may assume that the string has sufficient space at the end to hold the additional characters, and that you are given the "true" length of the string. 
 Note:: If implementing in Java, please use a character array so that you can perform this operation in place.
-	----
+--
+	[source,java]
+-----------------
 	EXAMPLE
 	Input: "Mr John Smith JJ, 13  "
 	Output: "Mr%2eJohn%2eSmith"
-	----
-
+-----------------
+--
 . https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/PalindromePermutation.java[*Palindrome Permutation:*] Given a string, write a function to check if it is a permutation of a palindrome. A palindrome is a word or phrase that is the same forwards and backwards. A permutation is a rearrangement of letters. The palindrome does not need to be limited to just dictionary words.
 	----
 	EXAMPLE
