--- a/README.adoc
+++ b/README.adoc
@@ -3,13 +3,13 @@
  
 
 .https://github.com/sunilsoni/cracking-the-coding-interview/tree/master/src/com/ctci6/ch01[Solutions to Chapter 1: Arrays and Strings]
---
-. https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/IsUniqueChars.java[*Is Unique:*] Implement an algorithm to determine if a string has all unique characters. What if you cannot use additional data structures?.
 
-. https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/Permutation.java[*Check Permutation:*] Given two strings, write a method to decide if one is a permutation of the
-other.
+https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/IsUniqueChars.java[*Is Unique:*] Implement an algorithm to determine if a string has all unique characters. What if you cannot use additional data structures?.::
 
-. https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/URLify.java[*URLify:*] Write a method to replace all spaces in a string with '%2e: You may assume that the string has sufficient space at the end to hold the additional characters, and that you are given the "true" length of the string. 
+https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/Permutation.java[*Check Permutation:*] Given two strings, write a method to decide if one is a permutation of the
+other.::
+
+https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/URLify.java[*URLify:*] Write a method to replace all spaces in a string with '%2e: You may assume that the string has sufficient space at the end to hold the additional characters, and that you are given the "true" length of the string. 
 Note:: If implementing in Java, please use a character array so that you can perform this operation in place.
 
 [source,java]
@@ -17,7 +17,7 @@ Note:: If implementing in Java, please use a character array so that you can per
 	EXAMPLE
 	Input: "Mr John Smith JJ, 13  "
 	Output: "Mr%2eJohn%2eSmith"
------------------
+-----------------::
 
 . https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/PalindromePermutation.java[*Palindrome Permutation:*] Given a string, write a function to check if it is a permutation of a palindrome. A palindrome is a word or phrase that is the same forwards and backwards. A permutation is a rearrangement of letters. The palindrome does not need to be limited to just dictionary words.
 [source,java]
@@ -26,7 +26,7 @@ Note:: If implementing in Java, please use a character array so that you can per
 	Input: Tact Coa
 	Output: True (permutations:"taco cat'; "atco cta'; etc.)
 -----------------
-
+::
 
 . https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/OneEditAway.java[*One Away:*] There are three types of edits that can be performed on strings: insert a character, remove a character, or replace a character. Given two strings, write a function to check if they are one edit (or zero edits) away.
 
@@ -53,4 +53,4 @@ pale, bae -> false
 e.g., Uwaterbottleu is a rotation of uerbottlewatU.
 -----------------
 
---
+
