--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,7 @@ other.
 
 . https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch01/URLify.java[*URLify:*] Write a method to replace all spaces in a string with '%2e: You may assume that the string has sufficient space at the end to hold the additional characters, and that you are given the "true" length of the string. 
 
-IMPORTANT: If implementing in Java, please use a character array so that you can perform this operation in place.
+IMPORTANT: Important.If implementing in Java, please use a character array so that you can perform this operation in place.
 
 [source,java]
 -----------------
