--- a/README.adoc
+++ b/README.adoc
@@ -56,3 +56,6 @@ e.g., Uwaterbottleu is a rotation of uerbottlewatU.
 -----------------
 
 == https://github.com/sunilsoni/cracking-the-coding-interview/tree/master/src/com/ctci6/ch02[Solutions to Chapter 2: Linked List]
+
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/RemoveDups.java[*Remove Dups:] Write code to remove duplicates from an unsorted linked list.
+FOLLOW UP:: How would you solve this problem if a temporary buffer is not allowed?
