--- a/README.adoc
+++ b/README.adoc
@@ -61,6 +61,7 @@ e.g., Uwaterbottleu is a rotation of uerbottlewatU.
 FOLLOW UP:: How would you solve this problem if a temporary buffer is not allowed?
 
 
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/ReturnKthToLast.java[*Return Kth to Last:*] Implement an algorithm to find the kth to last element of a singly linked list.
 
 
 
