--- a/README.adoc
+++ b/README.adoc
@@ -63,10 +63,16 @@ FOLLOW UP:: How would you solve this problem if a temporary buffer is not allowe
 
 * https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/ReturnKthToLast.java[*Return Kth to Last:*] Implement an algorithm to find the kth to last element of a singly linked list.
 
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/DeleteMiddleNode.java[*Delete Middle Node:*] 
 
-
-
-
+ Implement an algorithm to delete a node in the middle (Le., any node but the first and last node, not necessarily the exact middle) of a  singly linked list, given only access to that node.
+ 
+[source,java]
+-----------------
+EXAMPLE
+Input: the node c from the linked list a - >b- >c - >d - >e- >f
+Result: nothing is returned, but the new linked list looks like a->b->d->e->f
+-----------------
 
 
 
