--- a/README.adoc
+++ b/README.adoc
@@ -76,7 +76,7 @@ Result: nothing is returned, but the new linked list looks like a->b->d->e->f
 * https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/Partition.java[*Partition:*] 
 Write code to partition a linked list around a value x, such that all nodes less than x come before all nodes greater than or equal to x.
 If x is contained within the list, the values of x only need to be after the elements less than x (see below).
-The partition element x can appear anywhere in the right partition"; it does not need to appear between the left and right partitions.
+The partition element x can appear anywhere in the "right partition"; it does not need to appear between the left and right partitions.
 
 [source,java]
 -----------------
