--- a/README.adoc
+++ b/README.adoc
@@ -85,9 +85,23 @@ Input: 3 -> 5 -> 8 -> 5 -> 113 -> 2 -> 1 [partition = 5]
 Output: 3 -> 1 -> 2 -> 113 -> 5 -> 5 -> 8
 -----------------
 
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/SumLists.java[*Sum Lists:*] 
+You have two numbers represented by a linked list, where each node contains a single digit. The digits are stored in reverse order,
+such that the 1's digit is at the head of the list. Write a function that adds the two numbers and returns the sum as a linked list.
 
+[source,java]
+-----------------
+EXAMPLE:
+Input: (7-> 1 -> 6) + (5 -> 9 -> 2) .That is,617 + 295.
+Output: 2 - > 1 - > 9.That is, 912.
+-----------------
 
-
+[source,java]
+-----------------
+FOLLOW UP:Suppose the digits are stored in forward order. Repeat the above problem.
+Input: (6 -> 1 -> 7) + (2 -> 9 -> 5).That is,617 + 295.
+Output: 9 - > 1 - > 2.That is, 912.
+-----------------
 
 
 
