--- a/README.adoc
+++ b/README.adoc
@@ -109,6 +109,11 @@ Implement a function to check if a linked list is a palindrome.
 
 
 
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/Intersection.java[*Intersection:*] 
+Given two (singly) linked lists, determine if the two lists intersect. Return the intersecting node. Note that the intersection is defned based on reference, not value. That is, if the kth node of the frst linked list is the exact same node (by reference) as the jth node of the second
+linked list, then they are intersecting.
+
+
 
 
 
