--- a/README.adoc
+++ b/README.adoc
@@ -113,9 +113,19 @@ Implement a function to check if a linked list is a palindrome.
 Given two (singly) linked lists, determine if the two lists intersect. Return the intersecting node. Note that the intersection is defined based on reference, not value. That is, if the kth node of the first linked list is the exact same node (by reference) as the jth node of the second
 linked list, then they are intersecting.
 
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/LoopDetection.java[*Loop Detection:*] 
+Given a circular linked list, implement an algorithm that returns the node at the
+beginning of the loop.
+DEFINITION
+Circular linked list: A (corrupt) linked list in which a node's next pointer points to an earlier node, so
+as to make a loop in the linked list.
 
-
-
+[source,java]
+-----------------
+EXAMPLE
+Input:A - > B - > C - > D - > E - > C [the same C as earlier]
+Output:C
+-----------------
 
 
 
