--- a/README.adoc
+++ b/README.adoc
@@ -116,7 +116,7 @@ linked list, then they are intersecting.
 * https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch02/LoopDetection.java[*Loop Detection:*] 
 Given a circular linked list, implement an algorithm that returns the node at the beginning of the loop.
 
-DEFINITION
+DEFINITION:
 Circular linked list: A (corrupt) linked list in which a node's next pointer points to an earlier node, so as to make a loop in the linked list.
 
 [source,java]
