--- a/README.adoc
+++ b/README.adoc
@@ -128,4 +128,5 @@ Output:C
 
 
 
+== https://github.com/sunilsoni/cracking-the-coding-interview/tree/master/src/com/ctci6/ch03[Solutions to Chapter 3: Stacks and Queues]
 
