--- a/README.adoc
+++ b/README.adoc
@@ -130,3 +130,5 @@ Output:C
 
 == https://github.com/sunilsoni/cracking-the-coding-interview/tree/master/src/com/ctci6/ch03[Solutions to Chapter 3: Stacks and Queues]
 
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch03/ThreeInOne.java[*Three In One:*] 
+Describe how you could use a single array to implement three stacks.
