--- a/README.adoc
+++ b/README.adoc
@@ -181,4 +181,4 @@ Imagine a (literal) stack of plates. If the stack gets too high, it might topple
 threshold. Implement a data structure SetOfStacks that mimics this. SetOfStacks should be composed of several stacks and should create a new stack once the previous one exceeds capacity.
 SetOfStacks.push() and SetOfStacks. pop() should behave identically to a single stack (that is, pop() should return the same values as it would if there were just a single stack).
 
-FOLLOW UP ::Implement a function popAt(int index) which performs a pop operation on a specifc substack.
+FOLLOW UP:Implement a function popAt(int index) which performs a pop operation on a specifc substack.
