--- a/README.adoc
+++ b/README.adoc
@@ -182,3 +182,7 @@ threshold. Implement a data structure SetOfStacks that mimics this. SetOfStacks 
 SetOfStacks.push() and SetOfStacks. pop() should behave identically to a single stack (that is, pop() should return the same values as it would if there were just a single stack).
 
 FOLLOW UP:Implement a function popAt(int index) which performs a pop operation on a specifc substack.
+
+
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch03/QueueViaStack.java[*Queue Via Stack:*]
+Implement a MyQueue class which implements a queue using two stacks
