--- a/README.adoc
+++ b/README.adoc
@@ -186,3 +186,7 @@ FOLLOW UP:Implement a function popAt(int index) which performs a pop operation o
 
 * https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch03/QueueViaStack.java[*Queue Via Stack:*]
 Implement a MyQueue class which implements a queue using two stacks
+
+* https://github.com/sunilsoni/cracking-the-coding-interview/blob/master/src/com/ctci6/ch03/SortStack.java[*Sort Stack:*]
+Write a program to sort a stack such that the smallest items are on the top. You can use an additional temporary stack, but you may not copy the elements into any other data structure (such as an array). The stack supports the following operations: push, pop, peek, and isEmpty.
+
